--- a/Prioritize/Java/Single-Module/Maven/github-action-workshop.yml
+++ b/Prioritize/Java/Single-Module/Maven/github-action-workshop.yml
@@ -1,4 +1,4 @@
-name: Whitesource Prioritize Java with Maven & Github Issue comments
+name: Mend Prioritize Java with Maven & Github Issue comments
 
 on:
   push:
@@ -49,10 +49,10 @@ jobs:
         java -jar wss-unified-agent.jar -appPath $WARFILE -d ./
     - name: Check Project State
       run: |
-        curl -LJO https://raw.githubusercontent.com/whitesource-ft/ws-examples/main/Scripts/check-project-state.sh
+        curl -LJO https://raw.githubusercontent.com/mend-toolkit/ws-examples/main/Scripts/check-project-state.sh
         chmod +x ./check-project-state.sh && ./check-project-state.sh
     - name: Prioritize GH Issue Comments
       run: |
-        curl -LJO https://raw.githubusercontent.com/whitesource-ft/ws-examples/main/Scripts/ghissue-eua.sh
+        curl -LJO https://raw.githubusercontent.com/mend-toolkit/ws-examples/main/Scripts/ghissue-eua.sh
         chmod +x ./ghissue-eua.sh && ./ghissue-eua.sh
         
